<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".experience.ExperienceSelectExp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include layout="@layout/main_toolbar" />

        <TextView
            android:id="@+id/experience_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/tv_experience"
            android:textColor="@color/black"
            android:textSize="34sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:background="?android:attr/listDivider" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="599dp">

            <ImageView
                android:id="@+id/img_pool"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:foreground="@drawable/swimmingpool"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_baseline_pool_24" />

            <Button
                android:id="@+id/btn_pool_select"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                android:backgroundTint="@color/green_200"
                android:text="@string/btn_pool_select"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_pool"
                app:layout_constraintTop_toTopOf="@+id/img_pool" />

            <TextView
                android:id="@+id/tv_pool_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:text="@string/tv_pool_description"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_pool"
                app:layout_constraintEnd_toEndOf="@+id/btn_pool_select"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/btn_pool_select"
                app:layout_constraintTop_toBottomOf="@+id/btn_pool_select"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_gym"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:foreground="@drawable/ic_baseline_fitness_center_24"
                android:tint="@color/black"
                app:layout_constraintStart_toStartOf="@+id/img_pool"
                app:layout_constraintTop_toBottomOf="@+id/divider2"
                app:srcCompat="@drawable/ic_baseline_fitness_center_24" />

            <Button
                android:id="@+id/btn_gym_select"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/green_200"
                android:text="@string/btn_gym_select"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_pool_description"
                app:layout_constraintStart_toStartOf="@+id/tv_pool_description"
                app:layout_constraintTop_toTopOf="@+id/img_gym" />

            <TextView
                android:id="@+id/tv_gym_description"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="15dp"
                android:text="@string/tv_gym_description"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_gym"
                app:layout_constraintEnd_toEndOf="@+id/btn_gym_select"
                app:layout_constraintStart_toStartOf="@+id/btn_gym_select"
                app:layout_constraintTop_toBottomOf="@+id/btn_gym_select" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="20dp"
                android:foreground="@drawable/tennis"
                app:layout_constraintStart_toStartOf="@+id/img_gym"
                app:layout_constraintTop_toBottomOf="@+id/divider3"
                app:srcCompat="@drawable/ic_baseline_sports_tennis_24" />

            <Button
                android:id="@+id/btn_tennis_select"
                android:layout_width="0dp"
                android:layout_height="55dp"
                android:backgroundTint="@color/green_200"
                android:text="@string/btn_tennis_select"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_gym_description"
                app:layout_constraintStart_toStartOf="@+id/tv_gym_description"
                app:layout_constraintTop_toTopOf="@+id/imageView5" />

            <TextView
                android:id="@+id/tv_tennis_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="@string/tv_tennis_description"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="@+id/btn_tennis_select"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/btn_tennis_select"
                app:layout_constraintTop_toBottomOf="@+id/btn_tennis_select" />

            <View
                android:id="@+id/divider2"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toTopOf="@+id/img_gym"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_pool" />

            <View
                android:id="@+id/divider3"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/img_gym" />

            <View
                android:id="@+id/divider4"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tennis_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white">

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>


</androidx.drawerlayout.widget.DrawerLayout>