<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:context=".experience.ExperienceSession">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/main_toolbar"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_session"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:textColor="@color/black"
                android:textSize="34sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider5"
                android:layout_width="409dp"
                android:layout_height="1dp"
                android:layout_marginStart="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="15dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_session" />

            <TextView
                android:id="@+id/tv_res_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="30dp"
                android:text="@string/tv_res_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/divider5" />

            <EditText
                android:id="@+id/et_res_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_res_name" />

            <TextView
                android:id="@+id/tv_res_members"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_res_members"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tv_res_name"
                app:layout_constraintTop_toBottomOf="@+id/et_res_name" />

            <EditText
                android:id="@+id/et_res_members"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="@+id/et_res_name"
                app:layout_constraintTop_toTopOf="@+id/tv_res_members" />

            <TextView
                android:id="@+id/tv_res_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_res_mobile"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tv_res_members"
                app:layout_constraintTop_toBottomOf="@+id/et_res_members" />

            <EditText
                android:id="@+id/et_res_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="@+id/et_res_name"
                app:layout_constraintStart_toStartOf="@+id/et_res_members"
                app:layout_constraintTop_toTopOf="@+id/tv_res_mobile" />

            <TextView
                android:id="@+id/tv_res_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/tv_res_date"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/tv_res_mobile"
                app:layout_constraintTop_toBottomOf="@+id/et_res_mobile" />

            <Button
                android:id="@+id/btn_res_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/green_200"
                android:text="@string/btn_res_next"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_res_sel_date" />

            <TextView
                android:id="@+id/tv_res_sel_date"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:hint="Select Date"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_res_date"
                app:layout_constraintEnd_toEndOf="@+id/et_res_mobile"
                app:layout_constraintStart_toStartOf="@+id/et_res_mobile"
                app:layout_constraintTop_toTopOf="@+id/tv_res_date" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity ="start"
        android:background="@color/white"
        >

        <include layout="@layout/main_nav_drawer" />

    </RelativeLayout>

</androidx.drawerlayout.widget.DrawerLayout>